# entropy-metric-ml-security

./: README_project.md  pyproject.toml
.venv-win/: pyvenv.cfg
.venv-win/Scripts/: activate  activate.bat
.venv-win312/: pyvenv.cfg
.venv-win312/Scripts/: activate  activate.bat
a4s_eval/: entropy_experiments.ipynb
a4s_eval/entropy_outputs/: entropy_results.csv  evidently_entropy_report.html
a4s_eval/metrics/model_metrics/: prediction_entropy_metric.py  simple_accuracy_metric.py
experiments/: run_prediction_entropy_experiment.py
tests/metrics/model_metrics/: test_prediction_entropy_metric.py
