[project]
name = "a4s_eval"
version = "0.1.0"
description = "Evaluation service for A4S"
authors = [
    { name = "Thibault Simonetto", email = "thibault.simonetto@uni.lu" },
    { name = "Maxime Cordy", email = "maxime.cordy@uni.lu" },
]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.0,<3",
    "pandas>=2.2.3,<3",
    "pyarrow>=19.0.0,<20",
    "pandas-stubs>=2.2.3.241126,<3",
    "scikit-learn>=1.6.1,<2",
    "scipy>=1.15.1,<2",
    "requests>=2.32.3,<3",
    "onnx>=1.17.0,<2",
    "skl2onnx>=1.18.0,<2",
    "onnxruntime>=1.21.0,<2",
    "fastapi[standard]>=0.115.12",
    "celery[redis]>=5.5.3",
    "torch>=2.8.0",
    "numpy>=2.3.0",
    "ollama>=0.6.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "ruff>=0.7.4,<0.8",
    "isort>=5.13.2,<6",
    "mypy>=1.13.0,<2",
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "pylint>=3.3.1,<4",
    "graphviz>=0.20.3,<0.21",
    "pre-commit>=4.1.0,<5",
    "pip-licenses>=5.0.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
]
test = [
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.12.0,<4",
    "httpx>=0.27.0,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.pylint]
disable = [
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116"   # Missing function or method docstring
]

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
